--- a/index.html
+++ b/index.html
@@ -81,12 +81,11 @@
             <div class="filter-bottom">
                 <div class="filter-container">
                     <div class="filter-center">
-                        <el-select v-model="departmentValue" placeholder="所属系别" clearable>
-                            <el-option v-for="item in departmentList" :key="item.id" :label="item.department_name" :value="item.department_value"
-                                :disabled="item.disabled">
+                        <el-select v-model="filters.departmentValue" placeholder="所属系别" clearable>
+                            <el-option v-for="item in departmentList" :key="item.id" :label="item.department_name" :value="item.department_value" :disabled="item.disabled">
                             </el-option>
                         </el-select>
-                        <el-select v-model="dateListValue" placeholder="创作时间" clearable>
+                        <el-select v-model="filters.dateListValue" placeholder="创作时间" clearable>
                             <el-option v-for="item in dateList" :key="item.id" :label="item.date_name" :value="item.date_value" :disabled="item.disabled">
                             </el-option>
                         </el-select>
@@ -96,6 +95,26 @@
         </div>
         <!-- 页面主体 -->
         <div class="wrapper">
+            <ul>
+                <li v-for="item in collectionList" :key="item.id" class="float-left">
+                    <a :href="item.url">
+                        <div class="img-container">
+                            <img :src="item.imgUrl" alt="img" class="imgs" :class="item.proportion?'img-height':'img-width'">
+                        </div>
+                        <div class="info">
+                            <p class="title">{{item.title}}</p>
+                            <div class="author">
+                                <span class="float-left">{{item.author}}</span>
+                                <span class="float-right">{{item.department}}</span>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+            <!-- 分页 -->
+            <el-pagination class="paging" @current-change="handleCurrentChange" :current-page.sync="filters.currentPage" :page-size="15"
+                layout="prev, pager, next, jumper" :total="100">
+            </el-pagination>
         </div>
         <!-- Footer -->
         <div class="footer">
@@ -122,9 +141,14 @@
             search_value: '',
             filterList: [], //筛选
             departmentList: [], //所属系别
-            departmentValue: '', //所属系别
             dateList: [], //创作时间
-            dateListValue: [] //创作时间
+            collectionList: [], //藏品列表
+            filters: {
+                currentPage: 1, //分页
+                departmentValue: '', //所属系别
+                dateListValue: [], //创作时间
+                filterValue: [], //创作时间
+            }
         },
         mounted: function () {
             var that = this;
@@ -163,6 +187,12 @@
                     that.filterList = filterList.data; //设置筛选数据
                     that.departmentList = departmentList.data; //设置所属系别数据
                     that.dateList = dateList.data; //设置创作时间数据
+                    // 藏品列表数据
+                    that.collectionList = collection.data;
+                    window.onload = function () {
+                        //判断图片高宽比 以等比例缩放
+                        that.img_set(that.collectionList);
+                    }
                 }));
         },
         methods: {
@@ -200,6 +230,22 @@
                 }).catch(function (error) {
                     console.log(error);
                 });
+            },
+            //图片高宽不确定的情况下等比例缩放
+            img_set: function (imgs) {
+                var that = this;
+                for (var i = 0; i < imgs.length; i++) {
+                    var image = new Image();
+                    image.src = imgs[i].imgUrl;
+                    if (image.width > image.height) {
+                        that.collectionList[i].proportion = true;
+                    } else {
+                        that.collectionList[i].proportion = false;
+                    }
+                }
+            },
+            handleCurrentChange(val) {
+                console.log(`当前页: ${val}`);
             }
         },
     })
