--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
         <!-- Header -->
         <div class="header">
             <div class="logo">
-                <img src="./images/logo.png" alt="logo" class="logo-img float-left">
-                <div class="logo-text float-left">
-                    <p>设计艺术学院</p>
-                    <p>藏品管理系统</p>
-                </div>
+                <a href="index.html">
+                    <img src="./images/logo.png" alt="logo" class="logo-img float-left">
+                    <div class="logo-text float-left">
+                        <p>设计艺术学院</p>
+                        <p>藏品管理系统</p>
+                    </div>
+                </a>
             </div>
             <div class="search">
                 <el-input placeholder="请输入关键字" v-model="search_value" class="" @keyup.enter.native="propSearch()"></el-input>
@@ -61,7 +63,7 @@
             <el-carousel trigger="click" :style="{height:slide_height}">
                 <el-carousel-item v-for="item in slideList" :key="item.id">
                     <a :href="item.slide_img_url">
-                        <img :src="item.slide_img" :style="{height:slide_height}">
+                        <img :src="item.slide_img" :style="{width:'100%',height:slide_height}">
                     </a>
                 </el-carousel-item>
             </el-carousel>
