--- a/upload.html
+++ b/upload.html
@@ -29,14 +29,6 @@
         } else if (IETester() == 8.0 || IETester() == 7.0 || IETester() == 6.0 || IETester() == 5.0) {
             window.location.href = 'iepoint/index.html';
         }
-
-        // 动态设置font-size
-        (function () {
-            var cw = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
-            if (cw < 769) {
-                document.getElementsByTagName("html")[0].style.fontSize = 20 * (cw / 375) + 'px';
-            }
-        })();
     </script>
 </head>
 
@@ -58,6 +50,10 @@
                 <div class="upload-title">
                     <p>藏品上传</p>
                 </div>
+                <!-- <div class="upload float-right">
+                    <i class="iconfont icon-shangchuan float-left"></i>
+                    <a href="upload.html" class="float-right">藏品上传</a>
+                </div> -->
                 <div class="search float-right">
                     <el-input placeholder="请输入关键字" v-model="search_value" class="" @keyup.enter.native="propSearch()"></el-input>
                     <i class="el-icon-search" @click="propSearch()"></i>
@@ -134,7 +130,7 @@
         </div>
     </div>
 </body>
-<script src="js/vue.js"></script>
+<script src="js/vue.min.js"></script>
 <script src="js/axios.min.js"></script>
 <script src="js/element.min.js"></script>
 <script>
@@ -211,7 +207,13 @@
         },
         mounted: function () {
             var that = this;
-            var that = this;
+            window.onresize = function () {
+                // 手机端页面跳转
+                var cw = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
+                if (cw < 769) {
+                    window.location.href = './mobile/index.html';
+                }
+            }
             //获取所属院系
             function getDepartmentList() {
                 return axios.get('./mock/departmentList.json');
@@ -230,6 +232,7 @@
         methods: {
             propSearch: function () {
                 sessionStorage.setItem('search_keyword', this.search_value);
+                window.location.href = './search.html';
             },
             //图片删除的钩子
             handleRemove(file, fileList) {},
