--- a/upload.html
+++ b/upload.html
@@ -5,7 +5,7 @@
     <title>藏品上传-中国美术学院</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="renderer" content="webkit|ie-comp|ie-stand" />
+    <meta name="renderer" content="webkit" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <meta name="applicable-device" content="pc,mobile">
     <link rel="shortcut icon" href="images/favicon.ico" />
@@ -28,6 +28,11 @@
             //window.location.href = 'iepoint/index.html';
         } else if (IETester() == 8.0 || IETester() == 7.0 || IETester() == 6.0 || IETester() == 5.0) {
             window.location.href = 'iepoint/index.html';
+        }
+        // 手机端页面跳转
+        var cw = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
+        if (cw < 769) {
+            window.location.href = './mobile/index.html';
         }
     </script>
 </head>
